--- a/translation/ko.po
+++ b/translation/ko.po
@@ -28,6 +28,38 @@ msgstr "모드:"
 msgid "Show unsupported modes"
 msgstr "미지원 모드 보이기"
 
+#: ../contents/ui/configGeneral.qml
+msgid "Plasmoid Status"
+msgstr "Plasmoid 상태"
+
+#: ../contents/ui/configGeneral.qml
+msgid "Active"
+msgstr "활성"
+
+#: ../contents/ui/configGeneral.qml
+msgid "Passive"
+msgstr "중립"
+
+#: ../contents/ui/configGeneral.qml
+msgid "dGPU active on battery"
+msgstr "배터리 소모 중 외장 그래픽 활성"
+
+#: ../contents/ui/configGeneral.qml
+msgid "dGPU inactive on battery"
+msgstr "배터리 소모 중 외장 그래픽 비활성"
+
+#: ../contents/ui/configGeneral.qml
+msgid "dGPU active on AC"
+msgstr "AC 충전 중 외장 그래픽 활성"
+
+#: ../contents/ui/configGeneral.qml
+msgid "dGPU inactive on AC"
+msgstr "AC 충전 중 외장 그래픽 비활성"
+
+#: ../contents/ui/configGeneral.qml
+msgid "These options will work only when the plasmoid visibility is set to 'Shown when relevant'"
+msgstr "이 설정들은 Plasmoid 표시 여부가 '필요할 때 표시'로 설정되어 있을 때만 작동합니다"
+
 #: ../contents/ui/main.qml
 msgid "Graphics mode: %1, dGPU power: %2"
 msgstr "그래픽 모드: %1, 외장 그래픽 전원: %2"
